backend/game-engine/check_err.txt
cargo :     Checking 
game-engine v0.1.0 (C:
\proiecte-vue\monopoly
-world-edition\backend
\game-engine)
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -Encoding 
ascii check_err.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng ga...nd\game-e    
ngine):String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
warning: unreachable 
pattern
   --> game-engine\src
\game.rs:685:13
    |
685 |             _ 
=> println!("Card 
action omitted for 
now."),
    |             ^ 
no value can reach 
this
    |
note: multiple 
earlier patterns 
match some of the 
same values
   --> game-engine\src
\game.rs:685:13
    |
609 |             Here
AndNowCardAction::Move
Steps(steps) => {
    |             ----
----------------------
------------ matches 
some of the same 
values
...
617 |             Here
AndNowCardAction::Move
Anywhere => {
    |             ----
----------------------
-------- matches some 
of the same values
...
623 |             Here
AndNowCardAction::GetO
utOfJailFree => {
    |             ----
----------------------
------------ matches 
some of the same 
values
...
629 |             Here
AndNowCardAction::Swap
Stamps => {
    |             ----
----------------------
------ matches some 
of the same values
...
685 |             _ 
=> println!("Card 
action omitted for 
now."),
    |             ^ 
...and 7 other 
patterns collectively 
make this unreachable
    = note: `#[warn(un
reachable_patterns)]` 
(part of 
`#[warn(unused)]`) on 
by default

error[E0382]: borrow 
of moved value: 
`stamp`
   --> game-engine\src
\game.rs:918:87
    |
913 |                 
     if let 
Some(stamp) = self.pla
yers[t_idx].passport.r
emove_last_stamp() {
    |                 
                 
----- move occurs 
because `stamp` has 
type `Stamp`, which 
does not implement 
the `Copy` trait
...
917 |                 
             self.play
ers[idx].passport.add_
stamp(stamp);
    |                 
                      
                      
      ----- value 
moved here
918 |                 
             
println!("??? Ai 
furat ??tampila {} de 
la {} pentru M150!", 
stamp.name, self.playe
rs[t_idx].name);
    |                 
                      
                      
                      
     ^^^^^^^^^^ value 
borrowed here after 
move
    |
note: consider 
changing this 
parameter type in 
method `add_stamp` to 
borrow instead if 
owning the value 
isn't necessary
   --> game-engine\src
\passport.rs:56:40
    |
 56 |     pub fn 
add_stamp(&mut self, 
stamp: Stamp) -> bool 
{
    |            
--------- in this 
method    ^^^^^ this 
parameter takes 
ownership of the value
    = note: this 
error originates in 
the macro `$crate::for
mat_args_nl` which 
comes from the 
expansion of the 
macro `println` (in 
Nightly builds, run 
with -Z 
macro-backtrace for 
more info)
help: consider 
cloning the value if 
the performance cost 
is acceptable
    |
917 |                 
             self.play
ers[idx].passport.add_
stamp(stamp.clone());
    |                 
                      
                      
           ++++++++

error[E0382]: use of 
partially moved 
value: `card`
    --> game-engine\sr
c\game.rs:1169:38
     |
1167 |             
let action = 
card.action;
     |                
          ----------- 
value partially moved 
here
1168 |             
let _ = self.execute_c
hance_action(idx, 
action);
1169 |             sel
f.chance_deck.discard(
card);
     |                
                      
^^^^ value used here 
after partial move
     |
     = note: partial 
move occurs because 
`card.action` has 
type 
`ChanceCardAction`, 
which does not 
implement the `Copy` 
trait

For more information 
about this error, try 
`rustc --explain 
E0382`.
warning: 
`game-engine` (lib) 
generated 1 warning
error: could not 
compile `game-engine` 
(lib) due to 2 
previous errors; 1 
warning emitted
